[package]
name = "aoc07"
version = "0.1.0"
authors = ["Sindre Ilebekk Johansen <sindre@sindrejohansen.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8.2"
async-std = {version="1.2.0", features=["unstable", "attributes"]}
anyhow = "1.0.25"
futures = "0.3.1"
