[package]
name = "aoc13"
version = "0.1.0"
authors = ["Sindre Ilebekk Johansen <sindre@sindrejohansen.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
intcode = {path="../intcode"}
async-std = {version="1.3.0", features=["unstable"]}
winit = "0.20.0-alpha5"
pixels = "0.0.2"
env_logger = "0.7.1"
winit_input_helper = "0.4.0-alpha4"
async-trait = "0.1.21"
