[package]
name = "intcode"
version = "0.1.0"
authors = ["Sindre Ilebekk Johansen <sindre@sindrejohansen.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.25"
async-std = {version="1.2.0", features=["unstable", "attributes"]}
